@@ -6,7 +6,6 @@ import java.util.stream.Collectors;
 
 import javax.script.ScriptException;
 
-import io.github.thanospapapetrou.funcky.compiler.exceptions.FunckyCompilationException;
 import io.github.thanospapapetrou.funcky.compiler.ast.FunckyApplication;
 import io.github.thanospapapetrou.funcky.compiler.ast.FunckyDefinition;
 import io.github.thanospapapetrou.funcky.compiler.ast.FunckyExpression;
@@ -15,77 +14,62 @@ import io.github.thanospapapetrou.funcky.compiler.ast.FunckyReference;
 public class FunckyRuntimeException extends ScriptException {
     private static final String APPLICATION = "%n    in `%1$s` in %2$s at line %3$d at column %4$d";
     private static final String DEFINITION = "%n  in `%1$s` in %2$s at line %3$d at column %4$d";
-    private static final String ERROR_FORMATTING_STACK_TRACE = "Error formatting stack trace for %1$s";
-    private static final String RUNTIME_COMPILATION_ERROR = "Compilation error detected at runtime: %1$s";
-    private final List<FunckyExpression> stackTrace;
+    private static final String ERROR_FORMATTING_STACK = "Error formatting stack for %1$s";
+    private final List<FunckyExpression> stack;
 
-    public FunckyRuntimeException(final String message) {
-        this(message, null, -1, -1, new ArrayList<>());
+    FunckyRuntimeException(final String message) {
+        this(message, new ArrayList<>());
     }
 
-    public FunckyRuntimeException(final FunckyCompilationException e) {
-        this(String.format(RUNTIME_COMPILATION_ERROR, e.getMessage()), e.getFileName(), e.getLineNumber(),
-                e.getColumnNumber(), new ArrayList<>());
+    private FunckyRuntimeException(final String message, final List<FunckyExpression> stack) {
+        super(message, null, -1, -1);
+        this.stack = stack;
     }
 
-    private FunckyRuntimeException(final String message, final String file, final int line, final int column,
-            final List<FunckyExpression> stackTrace) {
-        super(message, file, line, column);
-        this.stackTrace = stackTrace;
-    }
-
-    public void addStackTrace(final FunckyApplication application) {
-        stackTrace.add(application);
-    }
-
-    public void addStackTrace(final FunckyReference reference) {
-        stackTrace.add(reference);
+    public List<FunckyExpression> getStack() {
+        return stack;
     }
 
     @Override
     public String getFileName() {
-        return stackTrace.isEmpty() ? null : stackTrace.get(0).getFile().toString();
+        return stack.isEmpty() ? null : stack.getFirst().getFile().toString();
     }
 
     @Override
     public int getLineNumber() {
-        return stackTrace.isEmpty() ? -1 : stackTrace.get(0).getLine();
+        return stack.isEmpty() ? -1 : stack.getFirst().getLine();
     }
 
     @Override
     public int getColumnNumber() {
-        return stackTrace.isEmpty() ? -1 : stackTrace.get(0).getColumn();
+        return stack.isEmpty() ? -1 : stack.getFirst().getColumn();
     }
 
     @Override
     public String getMessage() {
-        return super.getMessage() + stackTrace.stream().map(this::formatStackTrace).collect(Collectors.joining());
+        return super.getMessage() + stack.stream().map(this::formatStack).collect(Collectors.joining());
     }
 
-    private String formatStackTrace(final FunckyExpression expression) {
+    private String formatStack(final FunckyExpression expression) {
         if (expression instanceof FunckyApplication) {
-            return formatStackTrace((FunckyApplication) expression);
+            return formatStack((FunckyApplication) expression);
         } else if (expression instanceof FunckyReference) {
-            return formatStackTrace((FunckyReference) expression);
+            return formatStack((FunckyReference) expression);
         } else {
-            throw new IllegalStateException(String.format(ERROR_FORMATTING_STACK_TRACE, expression));
+            throw new IllegalStateException(String.format(ERROR_FORMATTING_STACK, expression));
         }
     }
 
-    private String formatStackTrace(final FunckyApplication application) {
+    private String formatStack(final FunckyApplication application) {
         return String.format(APPLICATION, application, application.getFile(), application.getLine(),
                 application.getColumn());
     }
 
-    private String formatStackTrace(final FunckyReference reference) {
-        try {
+    private String formatStack(final FunckyReference reference) {
             final FunckyExpression expression = reference.getEngine().getManager()
                     .getDefinitionExpression(reference.resolveNamespace(), reference.getName());
             return String.format(DEFINITION,
                     new FunckyDefinition(expression.getFile(), expression.getLine(), reference.getName(), expression),
                     expression.getFile(), expression.getLine(), 1);
-        } catch (final FunckyCompilationException e) {
-            throw new SneakyFunckyRuntimeException(new FunckyRuntimeException(e));
-        }
     }
 }
